--- a/index.html
+++ b/index.html
@@ -1,42 +1,53 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      body{
-        font-size: 42px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="main">
-      x: <span id="accel_x"></span> <br />
-      y: <span id="accel_y"></span> <br />
-      z: <span id="accel_z"></span>
-      <br /><br />
-      Status: <span id="metric_b"></span> <br />
-    </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-
-      socket.on('update_chart', function(data){
-        var bits = data.accel.split(';')
-
-        document.getElementById('accel_x').innerHTML = bits[0];
-        document.getElementById('accel_y').innerHTML = bits[1];
-        document.getElementById('accel_z').innerHTML = bits[2];
-
-        if (Math.abs(bits[0]) > 200 &&
-          Math.abs(bits[1]) > 200 &&
-          Math.abs(bits[2])  > 200
-        ) {
-          document.getElementById('metric_b').innerHTML = 'true';
-        }
-        else {
-          document.getElementById('metric_b').innerHTML = 'false';
-        }
-      });
-    </script>
-  </body>
+<html xmlns:fb="http://ogp.me/ns/fb#">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, maximum-scale=1.0">
+		<meta name="description" content="Get Beefee">
+		<meta name="author" content="http://mintitmedia.com">
+		<title>Beefee</title>
+		<!-- Open Graph Data
+		<meta property="og:url" content="http://www.greentalks.mx" />
+		<meta property="og:description" content="Sustentabilidad Colectiva" />
+		<meta property="og:site_name" content="Green Talks" />
+		<meta property="og:image" content="http://www.greentalks.mx/static/images/og_image.jpg" />
+		<meta property="og:locale" content="es_MX" />-->
+		<!-- Geo Location
+		<meta name="geo.region" content="MX" />
+		<meta name="geo.placename" content="Tijuana" />
+		<meta name="geo.position" content="32.5031568;-116.9867687" />
+		<meta name="ICBM" content="32.5031568,-116.9867687" />-->
+		<!-- Files -->
+		<link rel="shortcut icon" type="image/png" href="resources/images/favicon.ico">
+		<link href="resources/css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="resources/css/device-min.css" rel="stylesheet" type="text/css" />
+		<link href="resources/css/styles.css" rel="stylesheet" type="text/css" />
+		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+		<div class="iphone">
+			<div class="marvel-device iphone6 silver">
+			    <div class="top-bar"></div>
+			    <div class="sleep"></div>
+			    <div class="volume"></div>
+			    <div class="camera"></div>
+			    <div class="sensor"></div>
+			    <div class="speaker"></div>
+			    <div class="screen home_page">
+					<div class="vert_central">
+						<a href="app.html">
+							<img src="resources/images/beefee_bee.gif" />
+							<img src="resources/images/beefee_logo.png" />
+						</a>
+					</div>
+			    </div>
+			    <div class="home"></div>
+			    <div class="bottom-bar"></div>
+			</div>
+		</div>
+		<!-- Scripts -->
+		<script src="resources/js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
+		<script src="resources/js/vendor/bootstrap.min.js" type="text/javascript"></script>
+		<script src="resources/js/controllers.js" type="text/javascript"></script>
+	</body>
 </html>
