--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<meta name="geo.position" content="32.5031568;-116.9867687" />
 		<meta name="ICBM" content="32.5031568,-116.9867687" />-->
 		<!-- Files -->
-		<link rel="shortcut icon" type="image/png" href="resources/images/favicon.ico">
-		<link href="resources/css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="resources/css/device-min.css" rel="stylesheet" type="text/css" />
-		<link href="resources/css/styles.css" rel="stylesheet" type="text/css" />
+		<link rel="shortcut icon" type="image/png" href="images/favicon.ico">
+		<link href="css/vendor/bootstrap.min.css" rel="stylesheet" type="text/css" />
+		<link href="css/device-min.css" rel="stylesheet" type="text/css" />
+		<link href="css/styles.css" rel="stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
@@ -36,8 +36,8 @@
 			    <div class="screen home_page">
 					<div class="vert_central">
 						<a href="app.html">
-							<img src="resources/images/beefee_bee.gif" />
-							<img src="resources/images/beefee_logo.png" />
+							<img src="images/beefee_bee.gif" />
+							<img src="images/beefee_logo.png" />
 						</a>
 					</div>
 			    </div>
@@ -46,8 +46,8 @@
 			</div>
 		</div>
 		<!-- Scripts -->
-		<script src="resources/js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
-		<script src="resources/js/vendor/bootstrap.min.js" type="text/javascript"></script>
-		<script src="resources/js/controllers.js" type="text/javascript"></script>
+		<script src="js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
+		<script src="js/vendor/bootstrap.min.js" type="text/javascript"></script>
+		<script src="js/controllers.js" type="text/javascript"></script>
 	</body>
 </html>
